# ForgetMeNots

./: .replit  README.md  memory.sql  pyproject.toml  requirements.txt  routes.py
static/css/: image-puzzle.css  journal.css  login-register.css  memories.css  puzzle.css  style.css
static/js/: journal.js  script.js
templates/: base.html  home.html  index.html  journal.html  login-register.html  memories.html  new.html  puzzle.html
